# rules_cuda

./: MODULE.bazel
.github/workflows/: build-tests.yaml
cuda/: BUILD.bazel  defs.bzl  remote_cuda.bzl  remote_cuda_extension.bzl  remote_cudnn_extension.bzl  repositories.bzl
cuda/private/: defs.bzl  os_helpers.bzl  remote_cuda.bzl  remote_cuda_cross_platform_alias.bzl  remote_cuda_cross_platform_toolchain_alias.bzl  remote_cuda_library_repository.bzl  remote_cuda_platform_library_repository.bzl  remote_cuda_platform_repository.bzl  remote_cuda_platform_toolchain_repository.bzl  remote_cuda_repositories.bzl  repositories.bzl  toolchain.bzl  utils.bzl
cuda/private/macros/: cuda_binary.bzl  cuda_test.bzl
cuda/private/rules/: cuda_library.bzl
cuda/private/toolchain_configs/: nvcc.bzl
cuda/runtime/: BUILD.remote_cuda  remote_cuda.BUILD.bazel
cuda/templates/: cccl_cuda_platform_library.BUILD.tpl  cuda11_platform_repository.BUILD.tpl  cuda12_platform_repository.BUILD.tpl  cuda_platform_library_v2.BUILD.tpl  cuda_platform_repository.BUILD.tpl  cuda_platform_repository_v2.BUILD.tpl  cuda_platform_repository_v3.BUILD.tpl  defs.bzl.tpl  nvcc_cuda_platform_library.BUILD.tpl  nvcc_platform_toolchain.BUILD.tpl  remote_cuda.BUILD.tpl  remote_cuda.BUILD.tpl_with_platforms  remote_cuda_cross_platform.BUILD.tpl  remote_cuda_cross_platform_toplevel.BUILD.tpl  remote_cuda_cross_platform_toplevel.BUILD.tpl_with_default_condition  remote_cuda_linux.BUILD.tpl  remote_cuda_module.BUILD.tpl  remote_cuda_module_nvcc.BUILD.tpl  remote_cuda_nvcc_toolchain.BUILD.tpl  remote_cuda_nvcc_toolchain_v2.BUILD.tpl  remote_cuda_parallel.BUILD.tpl  remote_toolchain_linux_nvcc.BUILD.tpl  remote_toolchain_nvcc.BUILD.tpl  remote_toolchain_nvcc.BUILD.tpl_with_platforms  remote_toolchain_nvcc_cross_platform.BUILD.tpl  remote_toolchain_nvcc_parallel.BUILD.tpl
examples/: MODULE.bazel  WORKSPACE.bazel  remote_cuda_cross_platform.BUILD.tpl.selects
examples/basic/: BUILD.bazel
examples/basic_macros/: BUILD.bazel
examples/if_cuda/: BUILD.bazel
examples/rdc/: BUILD.bazel
examples/thrust/: BUILD.bazel
