module(
    name = "rules_cuda",
    version = "0.0.0",
    compatibility_level = 1,
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "rules_cc", version = "0.0.9")

# Example of how one would instantiate platform specific toolchains
cuda_cross_platform = use_extension("@rules_cuda//cuda:remote_cuda_extension.bzl", "cuda_cross_platform", dev_dependency=True)
cuda_cross_platform.install(
    name = "remote_cuda",
    version = {
        "linux-x86_64": "11.8.0",
        "linux-aarch64": "11.8.0",
    },
)

# @remote_cuda contains cross-platform cuda library targets
# @remote_cuda_toolchain contains cross-platform nvcc toolchain definitions
use_repo(cuda_cross_platform, "remote_cuda", "remote_cuda_toolchain")

# Register all cross-platform toolchains
register_toolchains("@remote_cuda_toolchain//:all", dev_dependency = True)

# Download cudnn
cudnn_cross_platform = use_extension("@rules_cuda//cuda:remote_cudnn_extension.bzl", "cudnn_cross_platform", dev_dependency=True)
cudnn_cross_platform.install(
    name = "remote_cudnn",
    version = {
        "linux-x86_64": "8.9.5",
        "linux-aarch64": "8.9.5",
    },
    cuda_variant = {
        "linux-x86_64": "cuda11",
        "linux-aarch64": "cuda12",
    }
)

## @remote_cudnn contains aliases with "selects()" for cross-platform cudnn libraries
## Use bazel query @cudnn//:all to see available libraries
use_repo(cudnn_cross_platform, "remote_cudnn")
